--- a/index.html
+++ b/index.html
@@ -273,9 +273,16 @@
   <script>
     // Config
     const CONFIG = {
-      hero: "20250813_033057.mp4",
-      examples: ['5d082e0dca32a9ee1179d770c8bad45c.mp4', 'e4e42f334edaab1fd7b32ddf54e55473.mp4', '143331412d8075166f18e9b905746f91 (1).mp4', '23a6dacaa56208a99e5d69c1554f3ac4.mp4', '1c96e3d88600c4e67b28116d7afcf50e.mp4', '20250813_033057.mp4']
-    };
+  hero: "https://www.youtube.com/embed/BAzcL6EgjmY",
+  examples: [
+    "https://www.youtube.com/embed/PDPSmNB6Yg0",  // 1
+    "https://www.youtube.com/embed/d1yzjX2tbRw",  // 2
+    "https://www.youtube.com/embed/wB86dgN8nR8",  // 3
+    "https://www.youtube.com/embed/0ogg4t99gVM",  // 4
+    "https://www.youtube.com/embed/nflyu8r9wrc",  // 5
+    "https://www.youtube.com/embed/PDPSmNB6Yg0"   // 6 (temp duplicate of #1)
+  ]
+};
 
     // Helpers
     function buildEmbed(val, {title="Video", portrait=false} = {}){
